--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -3,6 +3,7 @@ certifi==2021.5.30
 charset-normalizer==2.0.4
 dj-stripe==2.5.1
 Django==3.2.7
+gunicorn==20.1.0
 idna==3.2
 jsonfield==3.1.0
 pytz==2021.1
